# Visual_Servoing_in_Gantry_robot

./: CMakeLists.txt  README.md  camera1.xml  config.txt  emc1.yaml  location.txt  main.cpp
